--- a/src/components/Home/HomePages.module.scss
+++ b/src/components/Home/HomePages.module.scss
@@ -28,6 +28,17 @@
 			justify-content: space-between;
 			align-items: center;
 			padding-inline: 1rem;
+			// .divMapStyle {
+			// 	width: 100%;
+			// 	height: 55px;
+			// 	border-radius: 7px;
+			// 	background-color: rgb(27, 24, 24);
+			// 	box-shadow: 0px 0px 6px #fff;
+			// 	display: flex;
+			// 	justify-content: space-between;
+			// 	align-items: center;
+			// 	padding-inline: 1rem;
+			// }
 		}
 	}
 }
